# ai-api-tester

./: .gitignore  LICENSE  MANIFEST.in  README.md  TROUBLESHOOTING.md  cli.py  mcp_server.py  pyproject.toml  setup.py
ci-templates/: github-actions.yml  gitlab-ci.yml
configs/: env-example.yaml
examples/: demo-order-create.yaml  finance-refund-retry.yaml  finance-sensitive-export.yaml
lib/: __init__.py  assertion.py  cli.py  detector.py  engine.py  locator.py  report.py
mcp-server/: README.md  package.json  server.py
prompts/: analyze_code.md  generate_cases.md  skill_prompt.md
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: assertions.md  context_format.md  dimensions.md  failure_analysis.md  routing_support.md  yaml_format.md
skill/scripts/: analyze_failures.py  auto.py  ci_reporter.py  dashboard.py  detect.py  diff_detect.py  export_automation_results.py  gen_context.py  heal.py  init_project.py  learn_history.py  locate.py  risk.py  run_tests.py  validate_cases.py
skill/scripts/ai_api_tester/: __init__.py  analyzer.py  assertion.py  automation_evidence.py  case_healer.py  config.py  detector.py  diff_detector.py  engine.py  failure_analyzer.py  history_learner.py  locator.py  report.py  route_extractor.py  schema.py  (+1 more)
tests/: test_assertion.py  test_automation_evidence.py  test_cli_workflow.py  test_engine.py  test_failure_analyzer.py  test_finance_refund_example.py  test_finance_sensitive_export_example.py  test_route_extractor.py  test_schema.py  test_skill_install_smoke.py  test_skill_structure.py  test_source_analyzer.py
(+5 files in other folders)
